--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,15 @@
-input.demo {
-    
+
+.top-menu {
+    background: #1976d2;
+    padding: 2px 15px;
+}
+
+.logo {
+  max-height: 55px;
+}
+
+
+.courses {
+    max-width: 400px;
+    margin: 50px auto;
 }
