--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,21 @@
 <div class="top-menu">
   <img class="logo" src="https://angular-academy.s3.amazonaws.com/main-logo/main-page-logo-small-hat.png">
 </div>
+<div class="courses" *ngIf="courses[0] as course">
 
-<div class="demo">
-  <div> Start date: {{ startDate | date: 'dd/MMM/yyyy' }} </div>
-</div>
 
-<div>
-  {{ title | lowercase }}
-</div>
+  <ng-template #blankImage let-courseName="description">
+    <p class="warn"> {{ courseName }} has no image yet.</p>
+    <img src="/assets/empty-image.png">
+  </ng-template>
 
-<div>
-  {{ price | currency : 'BRL' }}
-</div>
+  <app-course-card #cardRef [course]="course" [noImageTpl]="blankImage" (courseSelected)="onCourseSelected()">
+    <app-course-image [src]="course.iconUrl"></app-course-image>
 
-<div>
-  {{ rate | percent }}
-</div>
-
-<div *ngFor="let pair of course | keyvalue">
-  {{ pair.key + ': ' + pair.value }}
-</div>
-
-<div class="courses">
-  <app-course-card *ngFor="let course of courses; index as i;" (courseSelected)="onCourseSelected($event)"
-    [course]="course" [cardIndex]="i + 1">
-
+    <div class="course-description">
+      {{ course.longDescription }}
+    </div>
   </app-course-card>
   <br>
-
+  <br>
 </div>
