--- a/src/app/course-card/course-card.component.html
+++ b/src/app/course-card/course-card.component.html
@@ -1,14 +1,15 @@
 <ng-container *ngIf="course">
-    <div class="course-card" [ngClass]="cardClasses()">
+    <div class="course-card" [ngClass]="cardClasses()" #container>
 
         <div class="course-title">
-            {{ cardIndex + ' - ' + course.description }}
+            {{ course.description | uppercase }}
         </div>
-        <img width="300" alt="Angular Logo" [src]="course.iconUrl" *ngIf="course.iconUrl else noImage">
 
-        <div class="course-description">
-            {{ course.longDescription }}
-        </div>
+        <ng-template #noImage>
+            <ng-container *ngTemplateOutlet="noImageTpl; context: { description: course.description };">
+            </ng-container>
+        </ng-template>
+        <ng-content select="app-course-image" *ngIf="course.iconUrl; else noImage"></ng-content>
 
         <ng-container [ngSwitch]="course.category">
             <div class="course-category">
