--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <img class="logo" src="https://angular-academy.s3.amazonaws.com/main-logo/main-page-logo-small-hat.png">
 </div>
 
-<div class="courses" *ngIf="courses[0] as course">
+<div class="courses salmon-theme" *ngIf="courses[0] as course">
   <div highlighted #highlighter="hl" (toogleHighlight)="onToogle($event)">
 
     <app-course-card [course]="course">
