--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,26 @@
 <div class="top-menu">
-  <img class="logo" src="https://angular-academy.s3.amazonaws.com/main-logo/main-page-logo-small-hat.png">
+
+  <img class="logo"
+       src="https://angular-academy.s3.amazonaws.com/main-logo/main-page-logo-small-hat.png">
+
 </div>
 
-<div class="courses salmon-theme" *ngIf="courses[0] as course">
-  <div highlighted #highlighter="hl" (toogleHighlight)="onToogle($event)">
+<div>
 
-    <app-course-card [course]="course">
-      <app-course-image [src]="course.iconUrl" *ngxUnless="!course.iconUrl">
+  <div class="courses" *ngIf="courses$ | async as courses">
 
-      </app-course-image>
+    <course-card *ngFor="let course of courses"
+                 [course]="course">
 
-      <div class="course-description" (dblclick)="highlighter.toogle()">
-        {{ course.longDescription }}
-      </div>
-    </app-course-card>
+      <course-image [src]="course.iconUrl"></course-image>
+
+    </course-card>
+
   </div>
-  <br>
-  <br>
+
 
 </div>
+
+
+
+
