--- a/src/app/course-image/course-image.component.html
+++ b/src/app/course-image/course-image.component.html
@@ -1,3 +1,6 @@
 <div class="course-image" #courseImage>
-    <img width="300" alt="Angular Logo" [src]="imageUrl">
-  </div>
+
+    <img width="300" alt="Angular Logo"
+         [src]="imageUrl">
+
+</div>
