--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,3 +1,11 @@
+
+
+
+.course-card img {
+    border-radius: 4px;
+    margin-top: 10px;
+}
+
 button {
     margin-top: 20px;
     height: 40px;
@@ -6,6 +14,10 @@ button {
     color: white;
     border-radius: 4px;
 }
+
+
+
+
 
 .course-category {
     margin-top: 15px;
@@ -29,9 +41,17 @@ button {
 }
 
 .warn {
-    color: red;
+  color:red;
 }
 
 .highlighted {
-    box-shadow: 0 2px 16px 0 #de1e19, 0 3px 8px 0 rgba(226, 21, 19, 0.47), 0 6px 8px -1px #b41c18;
+  box-shadow: 0 2px 16px 0 #de1e19, 0 3px 8px 0 rgba(226, 21, 19, 0.47), 0 6px 8px -1px #b41c18;
 }
+
+
+
+
+
+
+
+
